--- a/export/resources/views/partials/footer.antlers.html
+++ b/export/resources/views/partials/footer.antlers.html
@@ -15,7 +15,7 @@
             {{else}}
             <a href="{{url}}">
                 <div
-                    class="button-text"
+                    class="button-text hover:underline"
                 >
                     {{title}}
                 </div>
@@ -43,7 +43,7 @@
                 {{nav:footer_legal_links}}
                 <a href="{{url}}">
                     <div
-                        class="button-text"
+                        class="button-text hover:underline"
                     >
                         {{title}}
                     </div>
