--- a/export/resources/views/blocks/contact_sections.antlers.html
+++ b/export/resources/views/blocks/contact_sections.antlers.html
@@ -1,19 +1,30 @@
 <div class="{{if !background_color_override}}bg-primary-color{{/if}} px-om {{partial:text_color}} {{if spacing_top_override}}{{partial:spacing_top_override}}{{else}}pt-fm-8xl{{/if}} {{if spacing_bottom_override}}{{partial:spacing_bottom_override}}{{else}}pb-fm-8xl{{/if}}" style="{{if background_color_override}}background-color: {{background_color_override}};{{/if}}">
     <div class="screen-max flex flex-col gap-fm-8xl">
         {{contact_sections}}
-        <div class="grid gap-y-fm-lg grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-            {{if section_title}}
-            <div class="prose w-full md:col-span-2 lg:col-span-1">
-                <div class="">{{section_title}}</div>
+        {{if section_title}}
+            <div class="grid grid-cols-1 lg:grid-cols-3">
+                <div class="prose w-full col-span-1">
+                    <div class="">{{section_title}}</div>
+                </div>
+                <div class="col-span-1 grid grid-cols-1 gap-fm-4xl lg:col-span-2 md:grid-cols-2">
+                    {{section_contacts}}
+                    <div class="prose">
+                        {{partial:text_content}}
+                    </div>
+                    {{/section_contacts}}
+                </div>
             </div>
-            {{/if}}
+        {{else}}           
+            <div class="grid gap-y-fm-lg grid-cols-1 gap-fm-4xl md:grid-cols-2 lg:grid-cols-3">
+                {{section_contacts}}
+                <div class="prose">
+                    {{partial:text_content}}
+                </div>
+                {{/section_contacts}}
+            </div>
+        {{/if}}
 
-            {{section_contacts}}
-            <div class="prose">
-                {{partial:text_content}}
-            </div>
-            {{/section_contacts}}
-        </div>
         {{/contact_sections}}
+       
     </div>
 </div>
