--- a/export/resources/views/partials/button_types.antlers.html
+++ b/export/resources/views/partials/button_types.antlers.html
@@ -5,4 +5,7 @@
 {{if type == "download_button"}}
     {{partial:download_button}}
 {{/if}}
+{{if type == "email_button"}}
+    {{partial:email_button}}
+{{/if}}
 {{/button_types}}
