--- a/export/resources/views/partials/footer.antlers.html
+++ b/export/resources/views/partials/footer.antlers.html
@@ -24,8 +24,8 @@
         </div>
     </div>
 
-    <div class="bg-primary-light-color rounded-rounded-xs py-fm-lg px-fm-sm flex flex-col gap-y-fm-4xl items-center xl:flex-row xl:justify-between xl:items-center xl:px-fm-xl">
-        <div>
+    <div class="bg-primary-light-color rounded-rounded-xs py-fm-lg px-fm-sm flex flex-col gap-fm-4xl items-center xl:flex-row xl:justify-between xl:items-center xl:px-fm-xl">
+        <div class="flex flex-col items-center gap-fm-lg lg:flex-row">
             {{footer:partner_logos}}
                 {{if partner_link}}
                 <a href="{{partner_link}}" target="_blank">
