--- a/export/resources/views/partials/style_variables.antlers.html
+++ b/export/resources/views/partials/style_variables.antlers.html
@@ -6,6 +6,27 @@
         --color-light-text-color: {{site_theme:light_text_color}};
         --color-accent-text-color: {{site_theme:accent_text_color}};
         --color-secondary-text-color: {{site_theme:secondary_text_color}};
+        --paragraph-font: '{{site_theme:paragraph_font}}';
+        --paragraph-text-scaler: {{site_theme:paragraph_text_scaler ?? 0}};
+        --paragraph-line-height: {{site_theme:paragraph_line_height ?? 120}}%;
+        --h1-font-override: {{site_theme:h1_font_override ?? site_theme:header_font}};
+        --h1-text-scaler-override: {{site_theme:h1_text_scaler_override ?? site_theme:header_text_scaler ?? 0}};
+        --h1-line-height-override: {{site_theme:h1_line_height_override ?? site_theme:header_line_height}}%;
+        --h2-font-override: {{site_theme:h2_font_override ?? site_theme:header_font}};
+        --h2-text-scaler-override: {{site_theme:h2_text_scaler_override ?? site_theme:header_text_scaler ?? 0}};
+        --h2-line-height-override: {{site_theme:h2_line_height_override ?? site_theme:header_line_height}}%;
+        --h3-font-override: {{site_theme:h3_font_override ?? site_theme:header_font}};
+        --h3-text-scaler-override: {{site_theme:h3_text_scaler_override ?? site_theme:header_text_scaler ?? 0}};
+        --h3-line-height-override: {{site_theme:h3_line_height_override ?? site_theme:header_line_height}}%;
+        --h4-font-override: {{site_theme:h4_font_override ?? site_theme:header_font}};
+        --h4-text-scaler-override: {{site_theme:h4_text_scaler_override ?? site_theme:header_text_scaler ?? 0}};
+        --h4-line-height-override: {{site_theme:h4_line_height_override ?? site_theme:header_line_height}}%;
+        --h5-font-override: {{site_theme:h5_font_override ?? site_theme:header_font}};
+        --h5-text-scaler-override: {{site_theme:h5_text_scaler_override ?? site_theme:header_text_scaler ?? 0}};
+        --h5-line-height-override: {{site_theme:h5_line_height_override ?? site_theme:header_line_height}}%;
+        --h6-font-override: {{site_theme:h6_font_override ?? site_theme:header_font}};
+        --h6-text-scaler-override: {{site_theme:h6_text_scaler_override ?? site_theme:header_text_scaler ?? 0}};
+        --h6-line-height-override: {{site_theme:h6_line_height_override ?? site_theme:header_line_height}}%;
     }
     
     {{if site_theme:media_border_rounding == 'extra_small'}}
