--- a/export/resources/css/site.css
+++ b/export/resources/css/site.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "./viewTransition.css" layer(utilities);
-@import '@splidejs/splide/css';
+@import "@splidejs/splide/css";
 
 @plugin 'futureman-tailwind-clamp-plugin';
 @plugin '@tailwindcss/typography';
@@ -16,17 +16,17 @@
     --color-accent-text-color: var(--color-accent-text-color);
     --color-secondary-text-color: var(--color-secondary-text-color);
 
-        /* border radius */
-        --radius-rounded-xs: clamp(0.5000rem, 0.3241rem + 0.7504vw, 2.1250rem); 
-        --radius-rounded-sm: clamp(1.1875rem, 0.7548rem + 1.1634vw, 2.5000rem); 
-        --radius-rounded-md: clamp(2.0000rem, 1.3407rem + 1.7729vw, 4.0000rem); 
+    /* border radius */
+    --radius-rounded-xs: clamp(0.5rem, 0.3241rem + 0.7504vw, 2.125rem);
+    --radius-rounded-sm: clamp(1.1875rem, 0.7548rem + 1.1634vw, 2.5rem);
+    --radius-rounded-md: clamp(2rem, 1.3407rem + 1.7729vw, 4rem);
 }
 
-.text-accent-text-color{
+.text-accent-text-color {
     color: var(--color-accent-text-color) !important;
 }
 
-.text-secondary-text-color{
+.text-secondary-text-color {
     color: var(--color-secondary-text-color) !important;
 }
 
@@ -42,85 +42,103 @@
 /* TYPOGRAPHY BASE STYLES */
 /* @layer base {
 } */
-
-.h1,
-h1,
-.prose h1,
-.h2,
-h2,
-.prose h2,
-.h3,
-h3,
-.prose h3,
-.h4,
-h4,
-.prose h4,
-.h5,
-h5,
-.prose h5,
-.h6,
-h6,
-.prose h6 {
-    font-family: var(--header-font), sans-serif;
-    /* font-variation-settings: "opsz" 12, "wght" 300; */
-    line-height: 1.2;
-}
-
 p,
 li,
 .button-text {
     font-family: var(--paragraph-font), sans-serif;
-    /* font-variation-settings: "slnt" 0, "wght" 400; */
 }
 
 .h1,
 h1,
 .prose h1 {
-    @apply text-c-[2.6rem,11.625rem,0.92,0.92] leading-[1.0];
+    font-family: var(--h1-font-override);
+    font-size: calc(2.6250rem * (1 + var(--h1-text-scaler-override) / 100));
+    line-height: var(--h1-line-height-override);
+
+    @media (min-width: 768px) {
+        font-size: clamp(
+            calc(2.6250rem * (1 + var(--h1-text-scaler-override) / 100)),
+            calc((2.0433rem + 2.4820vw) * (1 + var(--h1-text-scaler-override) / 100)),
+            calc(8.0000rem * (1 + var(--h1-text-scaler-override) / 100))
+        );
+    }
 }
 
 .h2,
 h2,
 .prose h2 {
-    @apply text-c-[2.25rem,5.625rem] leading-[1.0];
+    font-family: var(--h2-font-override);
+    font-size: clamp(
+        calc(2.0000rem * (1 + var(--h2-text-scaler-override) / 100)),
+        calc((1.6753rem + 1.3853vw) * (1 + var(--h2-text-scaler-override) / 100)),
+        calc(5.0000rem * (1 + var(--h2-text-scaler-override) / 100))
+    );
+    line-height: var(--h2-line-height-override);
 }
 
 .h3,
 h3,
 .prose h3 {
-    @apply text-c-[2.0rem,4rem] leading-[1.0];
+    font-family: var(--h3-font-override);
+    font-size: clamp(
+        calc(1.7500rem * (1 + var(--h3-text-scaler-override) / 100)),
+        calc((1.5065rem + 1.0390vw) * (1 + var(--h3-text-scaler-override) / 100)),
+        calc(4.0000rem * (1 + var(--h3-text-scaler-override) / 100))
+    );
+    line-height: var(--h3-line-height-override);
 }
 
 .h4,
 h4,
 .prose h4 {
-    @apply text-c-[1.75rem,2.8125rem] leading-[1.0];
+    font-family: var(--h4-font-override);
+    font-size: clamp(
+        calc(1.5000rem * (1 + var(--h4-text-scaler-override) / 100)),
+        calc((1.3377rem + 0.6926vw) * (1 + var(--h4-text-scaler-override) / 100)),
+        calc(3.0000rem * (1 + var(--h4-text-scaler-override) / 100))
+    );
+    line-height: var(--h4-line-height-override);
 }
 
 .h5,
 h5,
 .prose h5 {
-    @apply text-c-[1.25rem,2rem] leading-[1.0];
+    font-family: var(--h5-font-override);
+    font-size: clamp(
+        calc(1.2500rem * (1 + var(--h5-text-scaler-override) / 100)),
+        calc((1.1688rem + 0.3463vw) * (1 + var(--h5-text-scaler-override) / 100)),
+        calc(2.0000rem * (1 + var(--h5-text-scaler-override) / 100))
+    );
+    line-height: var(--h5-line-height-override);
 }
 
 .h6,
 h6,
 .prose h6 {
-    @apply text-c-[1rem,1.375rem];
+    font-family: var(--h6-font-override);
+    font-size: clamp(
+        calc(1.1250rem * (1 + var(--h6-text-scaler-override) / 100)),
+        calc((1.0844rem + 0.1732vw) * (1 + var(--h6-text-scaler-override) / 100)),
+        calc(1.5000rem * (1 + var(--h6-text-scaler-override) / 100))
+    );
+    line-height: var(--h6-line-height-override);
 }
 
 p,
 .prose p {
-    @apply text-base;
+    font-size: calc(1rem * (1 + var(--paragraph-text-scaler) / 100));
+    line-height: var(--paragraph-line-height);
 }
 
 p.small,
 .prose p.small {
-    @apply text-xs;
+    font-size: calc(0.75rem * (1 + var(--paragraph-text-scaler) / 100));
+    line-height: var(--paragraph-line-height);
 }
 
 .button-text {
-    @apply text-base;
+    font-size: calc(1rem * (1 + var(--paragraph-text-scaler) / 100));
+    line-height: var(--paragraph-line-height);
 }
 
 .text-content a {
