--- a/export/resources/views/partials/availabilities_expander.antlers.html
+++ b/export/resources/views/partials/availabilities_expander.antlers.html
@@ -31,7 +31,7 @@
         {{if numbered_rows}}
         <div class="{{partial:text_color}} min-w-c-[33px,600px]"></div>
         {{/if}}
-        <div class="prose max-w-none {{partial:text_color}} lg:max-w-[75%]">
+        <div class="{{partial:rich_text_class}} max-w-none {{partial:text_color}} lg:max-w-[75%]">
             {{partial:text_content}}
         </div>
     </div>
