--- a/export/resources/views/partials/email_button.antlers.html
+++ b/export/resources/views/partials/email_button.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-max {{partial:alignment}} group">
+<div class="max-w-max {{partial:alignment}} group button">
     <a href="mailto:{{email_address}}" class="no-underline" target="_blank">
         <div class="flex flex-row items-center gap-x-fm-3xs">
             <div class="button-text no-underline {{partial:text_color}}">{{button_text}}</div>
