--- a/export/resources/views/partials/expander_row.antlers.html
+++ b/export/resources/views/partials/expander_row.antlers.html
@@ -19,7 +19,7 @@
         {{if numbered_rows}}
         <div class="{{partial:text_color}} min-w-c-[33px,600px]"></div>
         {{/if}}
-        <div class="prose {{partial:text_color}}">
+        <div class="{{partial:rich_text_class}} {{partial:text_color}}">
             {{partial:text_content}}
         </div>
     </div>
