--- a/export/resources/views/partials/text_content.antlers.html
+++ b/export/resources/views/partials/text_content.antlers.html
@@ -1,4 +1,4 @@
-<div class="prose text-content mx-auto max-w-none text-content">
+<div class="{{partial:rich_text_class}} text-content mx-auto max-w-none text-content">
     {{text_content}}
         {{ if type == "text" }}
             {{ text }}
