--- a/export/resources/views/blocks/contact_sections.antlers.html
+++ b/export/resources/views/blocks/contact_sections.antlers.html
@@ -3,12 +3,12 @@
         {{contact_sections}}
         {{if section_title}}
             <div class="grid grid-cols-1 lg:grid-cols-3">
-                <div class="prose w-full col-span-1">
+                <div class="{{partial:rich_text_class}} w-full col-span-1">
                     <div class="">{{section_title}}</div>
                 </div>
                 <div class="col-span-1 grid grid-cols-1 gap-fm-4xl lg:col-span-2 md:grid-cols-2">
                     {{section_contacts}}
-                    <div class="prose">
+                    <div class="{{partial:rich_text_class}}">
                         {{partial:text_content}}
                     </div>
                     {{/section_contacts}}
@@ -17,7 +17,7 @@
         {{else}}           
             <div class="grid gap-y-fm-lg grid-cols-1 gap-fm-4xl md:grid-cols-2 lg:grid-cols-3">
                 {{section_contacts}}
-                <div class="prose">
+                <div class="{{partial:rich_text_class}}">
                     {{partial:text_content}}
                 </div>
                 {{/section_contacts}}
