--- a/export/resources/views/partials/download_button.antlers.html
+++ b/export/resources/views/partials/download_button.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-max {{partial:alignment}}">
+<div class="max-w-max {{partial:alignment}} button">
     <a href="{{download_asset}}" download class="no-underline"  target="_blank">
         <div
             class="flex flex-row items-center gap-x-fm-3xs">
