--- a/export/resources/views/partials/footer.antlers.html
+++ b/export/resources/views/partials/footer.antlers.html
@@ -8,7 +8,7 @@
             {{/footer:footer_logo}}
 
             <div class="w-[80%] h-[1px] bg-primary-color xl:h-[90px] xl:w-[1px]"></div>
-            <div class="prose">{{footer:address}}</div>
+            <div class="{{partial:rich_text_class}}">{{footer:address}}</div>
         </div>
         <div class="flex flex-col lg:flex-row items-center gap-fm-lg **:text-dark-text-color">
             {{nav:footer_links}} {{if button_style}} {{partial:pill_button innerNavStyle="light"}}
