--- a/export/resources/views/partials/no_outline_button.antlers.html
+++ b/export/resources/views/partials/no_outline_button.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-max {{partial:alignment}} group">
+<div class="max-w-max {{partial:alignment}} group button">
     <a href="{{button_link}}" class="no-underline" target="{{if open_in_new_tab}}_blank{{/if}}">
         <div
             class="flex flex-row items-center gap-x-fm-3xs">
