Revamped map component to use leaflet

--- a/export/resources/css/site.css
+++ b/export/resources/css/site.css
@@ -2,6 +2,7 @@
 @import "./viewTransition.css" layer(utilities);
 @import "@splidejs/splide/css";
 @import "./rich-text.css";
+@import "./leaflet.css";
 
 @plugin 'futureman-tailwind-clamp-plugin';
 
