--- a/export/resources/views/layout.antlers.html
+++ b/export/resources/views/layout.antlers.html
@@ -22,6 +22,8 @@
             window.h4FontOverride = "{{site_theme:h4_font_override}}";
             window.h5FontOverride = "{{site_theme:h5_font_override}}";
             window.h6FontOverride = "{{site_theme:h6_font_override}}";
+            window.navFont = "{{site_theme:nav_font ?? site_theme:paragraph_font}}";
+            window.buttonFont = "{{site_theme:button_font ?? site_theme:paragraph_font}}";
         </script>
     </head>
 
