--- a/export/resources/views/partials/nav.antlers.html
+++ b/export/resources/views/partials/nav.antlers.html
@@ -27,7 +27,7 @@
             {{nav:main_center_nav}}
             {{if no_results}}
             {{else}}
-            <a href="{{url}}" class="button-text {{if innerNavStyle == 'dark'}}text-light-text-color{{else}}text-dark-text-color{{/if}} transition-all duration-200 hover:underline {{ is_current ? 'underline' : '' }}">
+            <a href="{{url}}" class="nav-text {{if innerNavStyle == 'dark'}}text-light-text-color{{else}}text-dark-text-color{{/if}} transition-all duration-200 hover:underline {{ is_current ? 'underline' : '' }}">
                 {{title}}
             </a>
             {{/if}}
@@ -44,7 +44,7 @@
                         {{partial:pill_button}}
                     {{else}}
                         <a href="{{url}}">
-                            <div class="button-text {{if innerNavStyle == 'dark'}}text-light-text-color{{else}}text-dark-text-color{{/if}}  hover:underline {{ is_current ? 'underline' : '' }}">
+                            <div class="nav-text {{if innerNavStyle == 'dark'}}text-light-text-color{{else}}text-dark-text-color{{/if}}  hover:underline {{ is_current ? 'underline' : '' }}">
                                 {{title}}
                             </div>
                         </a>
@@ -80,7 +80,7 @@
             <div class="flex flex-col items-center justify-center gap-y-fm-lg md:flex-row md:gap-x-fm-lg">
                 {{nav:main_center_nav}}
                 <a href="{{url}}"
-                    class="button-text text-dark-text-color text-center transition-all duration-200 hover:underline {{ is_current ? 'underline' : '' }}">
+                    class="nav-text text-dark-text-color text-center transition-all duration-200 hover:underline {{ is_current ? 'underline' : '' }}">
                     {{title}}
                 </a>
                 {{/nav:main_center_nav}}
@@ -91,7 +91,7 @@
                 {{partial:pill_button innerNavStyle="light"}}
                 {{else}}
                 <a href="{{url}}">
-                    <div class="button-text text-dark-text-color text-center">
+                    <div class="nav-text text-dark-text-color text-center">
                         {{title}}
                     </div>
                 </a>
